--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,33 @@
-mysql-data
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 node_modules
+.DS_Store
 dist
+dist-ssr
 coverage
+*.local
 
-.env
+/cypress/videos/
+/cypress/screenshots/
 
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .vscode
 .idea
 
+mysql-data
+.env
 .DS_store
