--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
             timeout: 30s
             retries: 10
     backend:
-        build: .
+        build:
+            context: ./
+            dockerfile: ./Dockerfile.backend
         image: parismuseesquizz-backend
         depends_on:
             db:
@@ -29,6 +31,18 @@ services:
             - back-net
         ports:
             - "${API_PORT}:${API_PORT}"
+    frontend:
+        build:
+            context: ./
+            dockerfile: ./Dockerfile.frontend
+        image: parismuseesquizz-frontend
+        env_file:
+            - .env
+        ports:
+            - "${FRONT_PORT}:80"
+        networks:
+            - front-net
 
 networks:
     back-net:
+    front-net:
