--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -9,5 +9,6 @@ COPY .env ./
 ADD src ./src/
 ADD prisma ./prisma/
 
-RUN npm ci
+RUN npm install
+RUN npx prisma generate
 CMD npx prisma migrate deploy && npm start
